Term Project#2 Semi-C Interpreter/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> source
Rule 1     source -> declarefunc
Rule 2     declarefunc -> func declarefunc
Rule 3     declarefunc -> func
Rule 4     func -> INT ID LPAREN paramlist RPAREN LBRACE stmtlist RBRACE
Rule 5     func -> FLOAT ID LPAREN paramlist RPAREN LBRACE stmtlist RBRACE
Rule 6     func -> INT ID LPAREN RPAREN LBRACE stmtlist RBRACE
Rule 7     func -> FLOAT ID LPAREN RPAREN LBRACE stmtlist RBRACE
Rule 8     paramlist -> param COMMA paramlist
Rule 9     paramlist -> param
Rule 10    param -> VOID
Rule 11    param -> INT ID
Rule 12    param -> FLOAT ID
Rule 13    param -> INT STAR ID
Rule 14    param -> FLOAT STAR ID
Rule 15    stmtlist -> stmt stmtlist
Rule 16    stmtlist -> stmt
Rule 17    stmt -> return SEMICOLON
Rule 18    stmt -> declarevar SEMICOLON
Rule 19    stmt -> assignvar SEMICOLON
Rule 20    stmt -> forloop
Rule 21    stmt -> incre
Rule 22    stmt -> if
Rule 23    stmt -> funccall SEMICOLON
Rule 24    return -> RETURN
Rule 25    return -> RETURN arithexp
Rule 26    forloop -> FOR LPAREN id ASSIGN arithexp SEMICOLON id cmp arithexp SEMICOLON incre RPAREN LBRACE stmtlist RBRACE
Rule 27    if -> IF LPAREN arithexp cmp arithexp RPAREN LBRACE stmtlist RBRACE
Rule 28    funccall -> ID LPAREN arglist RPAREN
Rule 29    funccall -> ID LPAREN RPAREN
Rule 30    arglist -> arg COMMA arglist
Rule 31    arglist -> arg
Rule 32    arg -> arithexp
Rule 33    arg -> string
Rule 34    declarevar -> INT varlist
Rule 35    declarevar -> FLOAT varlist
Rule 36    declarevar -> INT STAR varlist
Rule 37    declarevar -> FLOAT STAR varlist
Rule 38    varlist -> id COMMA varlist
Rule 39    varlist -> id
Rule 40    assignvar -> id ASSIGN arithexp
Rule 41    arithexp -> LPAREN arithexp RPAREN
Rule 42    arithexp -> term arithexptail
Rule 43    arithexp -> term
Rule 44    arithexptail -> PLUS term arithexptail
Rule 45    arithexptail -> PLUS term
Rule 46    arithexptail -> MINUS term arithexptail
Rule 47    arithexptail -> MINUS term
Rule 48    term -> factor termtail
Rule 49    term -> factor
Rule 50    termtail -> STAR factor termtail
Rule 51    termtail -> STAR factor
Rule 52    termtail -> DIVIDE factor termtail
Rule 53    termtail -> DIVIDE factor
Rule 54    factor -> NUMBER
Rule 55    factor -> PLUS NUMBER
Rule 56    factor -> MINUS NUMBER
Rule 57    factor -> incre
Rule 58    incre -> INCREMENT id
Rule 59    incre -> id INCREMENT
Rule 60    factor -> id
Rule 61    factor -> funccall
Rule 62    id -> ID
Rule 63    id -> ID LBRACKET arithexp RBRACKET
Rule 64    cmp -> LGREATER
Rule 65    cmp -> RGREATER
Rule 66    cmp -> EQUAL
Rule 67    cmp -> NOTEQUAL
Rule 68    cmp -> RGREQUAL
Rule 69    cmp -> LGREQUAL
Rule 70    string -> STRING

Terminals, with rules where they appear

ASSIGN               : 26 40
COMMA                : 8 30 38
DIVIDE               : 52 53
EQUAL                : 66
FLOAT                : 5 7 12 14 35 37
FOR                  : 26
ID                   : 4 5 6 7 11 12 13 14 28 29 62 63
IF                   : 27
INCREMENT            : 58 59
INT                  : 4 6 11 13 34 36
LBRACE               : 4 5 6 7 26 27
LBRACKET             : 63
LGREATER             : 64
LGREQUAL             : 69
LPAREN               : 4 5 6 7 26 27 28 29 41
MINUS                : 46 47 56
NOTEQUAL             : 67
NUMBER               : 54 55 56
PLUS                 : 44 45 55
RBRACE               : 4 5 6 7 26 27
RBRACKET             : 63
RETURN               : 24 25
RGREATER             : 65
RGREQUAL             : 68
RPAREN               : 4 5 6 7 26 27 28 29 41
SEMICOLON            : 17 18 19 23 26 26
STAR                 : 13 14 36 37 50 51
STRING               : 70
VOID                 : 10
error                : 

Nonterminals, with rules where they appear

arg                  : 30 31
arglist              : 28 30
arithexp             : 25 26 26 27 27 32 40 41 63
arithexptail         : 42 44 46
assignvar            : 19
cmp                  : 26 27
declarefunc          : 1 2
declarevar           : 18
factor               : 48 49 50 51 52 53
forloop              : 20
func                 : 2 3
funccall             : 23 61
id                   : 26 26 38 39 40 58 59 60
if                   : 22
incre                : 21 26 57
param                : 8 9
paramlist            : 4 5 8
return               : 17
source               : 0
stmt                 : 15 16
stmtlist             : 4 5 6 7 15 26 27
string               : 33
term                 : 42 43 44 45 46 47
termtail             : 48 50 52
varlist              : 34 35 36 37 38

Parsing method: LALR

state 0

    (0) S' -> . source
    (1) source -> . declarefunc
    (2) declarefunc -> . func declarefunc
    (3) declarefunc -> . func
    (4) func -> . INT ID LPAREN paramlist RPAREN LBRACE stmtlist RBRACE
    (5) func -> . FLOAT ID LPAREN paramlist RPAREN LBRACE stmtlist RBRACE
    (6) func -> . INT ID LPAREN RPAREN LBRACE stmtlist RBRACE
    (7) func -> . FLOAT ID LPAREN RPAREN LBRACE stmtlist RBRACE

    INT             shift and go to state 4
    FLOAT           shift and go to state 5

    source                         shift and go to state 1
    declarefunc                    shift and go to state 2
    func                           shift and go to state 3

state 1

    (0) S' -> source .



state 2

    (1) source -> declarefunc .

    $end            reduce using rule 1 (source -> declarefunc .)


state 3

    (2) declarefunc -> func . declarefunc
    (3) declarefunc -> func .
    (2) declarefunc -> . func declarefunc
    (3) declarefunc -> . func
    (4) func -> . INT ID LPAREN paramlist RPAREN LBRACE stmtlist RBRACE
    (5) func -> . FLOAT ID LPAREN paramlist RPAREN LBRACE stmtlist RBRACE
    (6) func -> . INT ID LPAREN RPAREN LBRACE stmtlist RBRACE
    (7) func -> . FLOAT ID LPAREN RPAREN LBRACE stmtlist RBRACE

    $end            reduce using rule 3 (declarefunc -> func .)
    INT             shift and go to state 4
    FLOAT           shift and go to state 5

    func                           shift and go to state 3
    declarefunc                    shift and go to state 6

state 4

    (4) func -> INT . ID LPAREN paramlist RPAREN LBRACE stmtlist RBRACE
    (6) func -> INT . ID LPAREN RPAREN LBRACE stmtlist RBRACE

    ID              shift and go to state 7


state 5

    (5) func -> FLOAT . ID LPAREN paramlist RPAREN LBRACE stmtlist RBRACE
    (7) func -> FLOAT . ID LPAREN RPAREN LBRACE stmtlist RBRACE

    ID              shift and go to state 8


state 6

    (2) declarefunc -> func declarefunc .

    $end            reduce using rule 2 (declarefunc -> func declarefunc .)


state 7

    (4) func -> INT ID . LPAREN paramlist RPAREN LBRACE stmtlist RBRACE
    (6) func -> INT ID . LPAREN RPAREN LBRACE stmtlist RBRACE

    LPAREN          shift and go to state 9


state 8

    (5) func -> FLOAT ID . LPAREN paramlist RPAREN LBRACE stmtlist RBRACE
    (7) func -> FLOAT ID . LPAREN RPAREN LBRACE stmtlist RBRACE

    LPAREN          shift and go to state 10


state 9

    (4) func -> INT ID LPAREN . paramlist RPAREN LBRACE stmtlist RBRACE
    (6) func -> INT ID LPAREN . RPAREN LBRACE stmtlist RBRACE
    (8) paramlist -> . param COMMA paramlist
    (9) paramlist -> . param
    (10) param -> . VOID
    (11) param -> . INT ID
    (12) param -> . FLOAT ID
    (13) param -> . INT STAR ID
    (14) param -> . FLOAT STAR ID

    RPAREN          shift and go to state 13
    VOID            shift and go to state 15
    INT             shift and go to state 11
    FLOAT           shift and go to state 16

    paramlist                      shift and go to state 12
    param                          shift and go to state 14

state 10

    (5) func -> FLOAT ID LPAREN . paramlist RPAREN LBRACE stmtlist RBRACE
    (7) func -> FLOAT ID LPAREN . RPAREN LBRACE stmtlist RBRACE
    (8) paramlist -> . param COMMA paramlist
    (9) paramlist -> . param
    (10) param -> . VOID
    (11) param -> . INT ID
    (12) param -> . FLOAT ID
    (13) param -> . INT STAR ID
    (14) param -> . FLOAT STAR ID

    RPAREN          shift and go to state 18
    VOID            shift and go to state 15
    INT             shift and go to state 11
    FLOAT           shift and go to state 16

    paramlist                      shift and go to state 17
    param                          shift and go to state 14

state 11

    (11) param -> INT . ID
    (13) param -> INT . STAR ID

    ID              shift and go to state 19
    STAR            shift and go to state 20


state 12

    (4) func -> INT ID LPAREN paramlist . RPAREN LBRACE stmtlist RBRACE

    RPAREN          shift and go to state 21


state 13

    (6) func -> INT ID LPAREN RPAREN . LBRACE stmtlist RBRACE

    LBRACE          shift and go to state 22


state 14

    (8) paramlist -> param . COMMA paramlist
    (9) paramlist -> param .

    COMMA           shift and go to state 23
    RPAREN          reduce using rule 9 (paramlist -> param .)


state 15

    (10) param -> VOID .

    COMMA           reduce using rule 10 (param -> VOID .)
    RPAREN          reduce using rule 10 (param -> VOID .)


state 16

    (12) param -> FLOAT . ID
    (14) param -> FLOAT . STAR ID

    ID              shift and go to state 24
    STAR            shift and go to state 25


state 17

    (5) func -> FLOAT ID LPAREN paramlist . RPAREN LBRACE stmtlist RBRACE

    RPAREN          shift and go to state 26


state 18

    (7) func -> FLOAT ID LPAREN RPAREN . LBRACE stmtlist RBRACE

    LBRACE          shift and go to state 27


state 19

    (11) param -> INT ID .

    COMMA           reduce using rule 11 (param -> INT ID .)
    RPAREN          reduce using rule 11 (param -> INT ID .)


state 20

    (13) param -> INT STAR . ID

    ID              shift and go to state 28


state 21

    (4) func -> INT ID LPAREN paramlist RPAREN . LBRACE stmtlist RBRACE

    LBRACE          shift and go to state 29


state 22

    (6) func -> INT ID LPAREN RPAREN LBRACE . stmtlist RBRACE
    (15) stmtlist -> . stmt stmtlist
    (16) stmtlist -> . stmt
    (17) stmt -> . return SEMICOLON
    (18) stmt -> . declarevar SEMICOLON
    (19) stmt -> . assignvar SEMICOLON
    (20) stmt -> . forloop
    (21) stmt -> . incre
    (22) stmt -> . if
    (23) stmt -> . funccall SEMICOLON
    (24) return -> . RETURN
    (25) return -> . RETURN arithexp
    (34) declarevar -> . INT varlist
    (35) declarevar -> . FLOAT varlist
    (36) declarevar -> . INT STAR varlist
    (37) declarevar -> . FLOAT STAR varlist
    (40) assignvar -> . id ASSIGN arithexp
    (26) forloop -> . FOR LPAREN id ASSIGN arithexp SEMICOLON id cmp arithexp SEMICOLON incre RPAREN LBRACE stmtlist RBRACE
    (58) incre -> . INCREMENT id
    (59) incre -> . id INCREMENT
    (27) if -> . IF LPAREN arithexp cmp arithexp RPAREN LBRACE stmtlist RBRACE
    (28) funccall -> . ID LPAREN arglist RPAREN
    (29) funccall -> . ID LPAREN RPAREN
    (62) id -> . ID
    (63) id -> . ID LBRACKET arithexp RBRACKET

    RETURN          shift and go to state 41
    INT             shift and go to state 30
    FLOAT           shift and go to state 42
    FOR             shift and go to state 44
    INCREMENT       shift and go to state 45
    IF              shift and go to state 46
    ID              shift and go to state 31

    stmtlist                       shift and go to state 32
    stmt                           shift and go to state 33
    return                         shift and go to state 34
    declarevar                     shift and go to state 35
    assignvar                      shift and go to state 36
    forloop                        shift and go to state 37
    incre                          shift and go to state 38
    if                             shift and go to state 39
    funccall                       shift and go to state 40
    id                             shift and go to state 43

state 23

    (8) paramlist -> param COMMA . paramlist
    (8) paramlist -> . param COMMA paramlist
    (9) paramlist -> . param
    (10) param -> . VOID
    (11) param -> . INT ID
    (12) param -> . FLOAT ID
    (13) param -> . INT STAR ID
    (14) param -> . FLOAT STAR ID

    VOID            shift and go to state 15
    INT             shift and go to state 11
    FLOAT           shift and go to state 16

    param                          shift and go to state 14
    paramlist                      shift and go to state 47

state 24

    (12) param -> FLOAT ID .

    COMMA           reduce using rule 12 (param -> FLOAT ID .)
    RPAREN          reduce using rule 12 (param -> FLOAT ID .)


state 25

    (14) param -> FLOAT STAR . ID

    ID              shift and go to state 48


state 26

    (5) func -> FLOAT ID LPAREN paramlist RPAREN . LBRACE stmtlist RBRACE

    LBRACE          shift and go to state 49


state 27

    (7) func -> FLOAT ID LPAREN RPAREN LBRACE . stmtlist RBRACE
    (15) stmtlist -> . stmt stmtlist
    (16) stmtlist -> . stmt
    (17) stmt -> . return SEMICOLON
    (18) stmt -> . declarevar SEMICOLON
    (19) stmt -> . assignvar SEMICOLON
    (20) stmt -> . forloop
    (21) stmt -> . incre
    (22) stmt -> . if
    (23) stmt -> . funccall SEMICOLON
    (24) return -> . RETURN
    (25) return -> . RETURN arithexp
    (34) declarevar -> . INT varlist
    (35) declarevar -> . FLOAT varlist
    (36) declarevar -> . INT STAR varlist
    (37) declarevar -> . FLOAT STAR varlist
    (40) assignvar -> . id ASSIGN arithexp
    (26) forloop -> . FOR LPAREN id ASSIGN arithexp SEMICOLON id cmp arithexp SEMICOLON incre RPAREN LBRACE stmtlist RBRACE
    (58) incre -> . INCREMENT id
    (59) incre -> . id INCREMENT
    (27) if -> . IF LPAREN arithexp cmp arithexp RPAREN LBRACE stmtlist RBRACE
    (28) funccall -> . ID LPAREN arglist RPAREN
    (29) funccall -> . ID LPAREN RPAREN
    (62) id -> . ID
    (63) id -> . ID LBRACKET arithexp RBRACKET

    RETURN          shift and go to state 41
    INT             shift and go to state 30
    FLOAT           shift and go to state 42
    FOR             shift and go to state 44
    INCREMENT       shift and go to state 45
    IF              shift and go to state 46
    ID              shift and go to state 31

    stmtlist                       shift and go to state 50
    stmt                           shift and go to state 33
    return                         shift and go to state 34
    declarevar                     shift and go to state 35
    assignvar                      shift and go to state 36
    forloop                        shift and go to state 37
    incre                          shift and go to state 38
    if                             shift and go to state 39
    funccall                       shift and go to state 40
    id                             shift and go to state 43

state 28

    (13) param -> INT STAR ID .

    COMMA           reduce using rule 13 (param -> INT STAR ID .)
    RPAREN          reduce using rule 13 (param -> INT STAR ID .)


state 29

    (4) func -> INT ID LPAREN paramlist RPAREN LBRACE . stmtlist RBRACE
    (15) stmtlist -> . stmt stmtlist
    (16) stmtlist -> . stmt
    (17) stmt -> . return SEMICOLON
    (18) stmt -> . declarevar SEMICOLON
    (19) stmt -> . assignvar SEMICOLON
    (20) stmt -> . forloop
    (21) stmt -> . incre
    (22) stmt -> . if
    (23) stmt -> . funccall SEMICOLON
    (24) return -> . RETURN
    (25) return -> . RETURN arithexp
    (34) declarevar -> . INT varlist
    (35) declarevar -> . FLOAT varlist
    (36) declarevar -> . INT STAR varlist
    (37) declarevar -> . FLOAT STAR varlist
    (40) assignvar -> . id ASSIGN arithexp
    (26) forloop -> . FOR LPAREN id ASSIGN arithexp SEMICOLON id cmp arithexp SEMICOLON incre RPAREN LBRACE stmtlist RBRACE
    (58) incre -> . INCREMENT id
    (59) incre -> . id INCREMENT
    (27) if -> . IF LPAREN arithexp cmp arithexp RPAREN LBRACE stmtlist RBRACE
    (28) funccall -> . ID LPAREN arglist RPAREN
    (29) funccall -> . ID LPAREN RPAREN
    (62) id -> . ID
    (63) id -> . ID LBRACKET arithexp RBRACKET

    RETURN          shift and go to state 41
    INT             shift and go to state 30
    FLOAT           shift and go to state 42
    FOR             shift and go to state 44
    INCREMENT       shift and go to state 45
    IF              shift and go to state 46
    ID              shift and go to state 31

    stmtlist                       shift and go to state 51
    stmt                           shift and go to state 33
    return                         shift and go to state 34
    declarevar                     shift and go to state 35
    assignvar                      shift and go to state 36
    forloop                        shift and go to state 37
    incre                          shift and go to state 38
    if                             shift and go to state 39
    funccall                       shift and go to state 40
    id                             shift and go to state 43

state 30

    (34) declarevar -> INT . varlist
    (36) declarevar -> INT . STAR varlist
    (38) varlist -> . id COMMA varlist
    (39) varlist -> . id
    (62) id -> . ID
    (63) id -> . ID LBRACKET arithexp RBRACKET

    STAR            shift and go to state 53
    ID              shift and go to state 55

    varlist                        shift and go to state 52
    id                             shift and go to state 54

state 31

    (28) funccall -> ID . LPAREN arglist RPAREN
    (29) funccall -> ID . LPAREN RPAREN
    (62) id -> ID .
    (63) id -> ID . LBRACKET arithexp RBRACKET

    LPAREN          shift and go to state 56
    ASSIGN          reduce using rule 62 (id -> ID .)
    INCREMENT       reduce using rule 62 (id -> ID .)
    LBRACKET        shift and go to state 57


state 32

    (6) func -> INT ID LPAREN RPAREN LBRACE stmtlist . RBRACE

    RBRACE          shift and go to state 58


state 33

    (15) stmtlist -> stmt . stmtlist
    (16) stmtlist -> stmt .
    (15) stmtlist -> . stmt stmtlist
    (16) stmtlist -> . stmt
    (17) stmt -> . return SEMICOLON
    (18) stmt -> . declarevar SEMICOLON
    (19) stmt -> . assignvar SEMICOLON
    (20) stmt -> . forloop
    (21) stmt -> . incre
    (22) stmt -> . if
    (23) stmt -> . funccall SEMICOLON
    (24) return -> . RETURN
    (25) return -> . RETURN arithexp
    (34) declarevar -> . INT varlist
    (35) declarevar -> . FLOAT varlist
    (36) declarevar -> . INT STAR varlist
    (37) declarevar -> . FLOAT STAR varlist
    (40) assignvar -> . id ASSIGN arithexp
    (26) forloop -> . FOR LPAREN id ASSIGN arithexp SEMICOLON id cmp arithexp SEMICOLON incre RPAREN LBRACE stmtlist RBRACE
    (58) incre -> . INCREMENT id
    (59) incre -> . id INCREMENT
    (27) if -> . IF LPAREN arithexp cmp arithexp RPAREN LBRACE stmtlist RBRACE
    (28) funccall -> . ID LPAREN arglist RPAREN
    (29) funccall -> . ID LPAREN RPAREN
    (62) id -> . ID
    (63) id -> . ID LBRACKET arithexp RBRACKET

    RBRACE          reduce using rule 16 (stmtlist -> stmt .)
    RETURN          shift and go to state 41
    INT             shift and go to state 30
    FLOAT           shift and go to state 42
    FOR             shift and go to state 44
    INCREMENT       shift and go to state 45
    IF              shift and go to state 46
    ID              shift and go to state 31

    stmt                           shift and go to state 33
    stmtlist                       shift and go to state 59
    return                         shift and go to state 34
    declarevar                     shift and go to state 35
    assignvar                      shift and go to state 36
    forloop                        shift and go to state 37
    incre                          shift and go to state 38
    if                             shift and go to state 39
    funccall                       shift and go to state 40
    id                             shift and go to state 43

state 34

    (17) stmt -> return . SEMICOLON

    SEMICOLON       shift and go to state 60


state 35

    (18) stmt -> declarevar . SEMICOLON

    SEMICOLON       shift and go to state 61


state 36

    (19) stmt -> assignvar . SEMICOLON

    SEMICOLON       shift and go to state 62


state 37

    (20) stmt -> forloop .

    RETURN          reduce using rule 20 (stmt -> forloop .)
    INT             reduce using rule 20 (stmt -> forloop .)
    FLOAT           reduce using rule 20 (stmt -> forloop .)
    FOR             reduce using rule 20 (stmt -> forloop .)
    INCREMENT       reduce using rule 20 (stmt -> forloop .)
    IF              reduce using rule 20 (stmt -> forloop .)
    ID              reduce using rule 20 (stmt -> forloop .)
    RBRACE          reduce using rule 20 (stmt -> forloop .)


state 38

    (21) stmt -> incre .

    RETURN          reduce using rule 21 (stmt -> incre .)
    INT             reduce using rule 21 (stmt -> incre .)
    FLOAT           reduce using rule 21 (stmt -> incre .)
    FOR             reduce using rule 21 (stmt -> incre .)
    INCREMENT       reduce using rule 21 (stmt -> incre .)
    IF              reduce using rule 21 (stmt -> incre .)
    ID              reduce using rule 21 (stmt -> incre .)
    RBRACE          reduce using rule 21 (stmt -> incre .)


state 39

    (22) stmt -> if .

    RETURN          reduce using rule 22 (stmt -> if .)
    INT             reduce using rule 22 (stmt -> if .)
    FLOAT           reduce using rule 22 (stmt -> if .)
    FOR             reduce using rule 22 (stmt -> if .)
    INCREMENT       reduce using rule 22 (stmt -> if .)
    IF              reduce using rule 22 (stmt -> if .)
    ID              reduce using rule 22 (stmt -> if .)
    RBRACE          reduce using rule 22 (stmt -> if .)


state 40

    (23) stmt -> funccall . SEMICOLON

    SEMICOLON       shift and go to state 63


state 41

    (24) return -> RETURN .
    (25) return -> RETURN . arithexp
    (41) arithexp -> . LPAREN arithexp RPAREN
    (42) arithexp -> . term arithexptail
    (43) arithexp -> . term
    (48) term -> . factor termtail
    (49) term -> . factor
    (54) factor -> . NUMBER
    (55) factor -> . PLUS NUMBER
    (56) factor -> . MINUS NUMBER
    (57) factor -> . incre
    (60) factor -> . id
    (61) factor -> . funccall
    (58) incre -> . INCREMENT id
    (59) incre -> . id INCREMENT
    (62) id -> . ID
    (63) id -> . ID LBRACKET arithexp RBRACKET
    (28) funccall -> . ID LPAREN arglist RPAREN
    (29) funccall -> . ID LPAREN RPAREN

    SEMICOLON       reduce using rule 24 (return -> RETURN .)
    LPAREN          shift and go to state 65
    NUMBER          shift and go to state 68
    PLUS            shift and go to state 69
    MINUS           shift and go to state 70
    INCREMENT       shift and go to state 45
    ID              shift and go to state 74

    arithexp                       shift and go to state 64
    term                           shift and go to state 66
    factor                         shift and go to state 67
    incre                          shift and go to state 71
    id                             shift and go to state 72
    funccall                       shift and go to state 73

state 42

    (35) declarevar -> FLOAT . varlist
    (37) declarevar -> FLOAT . STAR varlist
    (38) varlist -> . id COMMA varlist
    (39) varlist -> . id
    (62) id -> . ID
    (63) id -> . ID LBRACKET arithexp RBRACKET

    STAR            shift and go to state 76
    ID              shift and go to state 55

    varlist                        shift and go to state 75
    id                             shift and go to state 54

state 43

    (40) assignvar -> id . ASSIGN arithexp
    (59) incre -> id . INCREMENT

    ASSIGN          shift and go to state 77
    INCREMENT       shift and go to state 78


state 44

    (26) forloop -> FOR . LPAREN id ASSIGN arithexp SEMICOLON id cmp arithexp SEMICOLON incre RPAREN LBRACE stmtlist RBRACE

    LPAREN          shift and go to state 79


state 45

    (58) incre -> INCREMENT . id
    (62) id -> . ID
    (63) id -> . ID LBRACKET arithexp RBRACKET

    ID              shift and go to state 55

    id                             shift and go to state 80

state 46

    (27) if -> IF . LPAREN arithexp cmp arithexp RPAREN LBRACE stmtlist RBRACE

    LPAREN          shift and go to state 81


state 47

    (8) paramlist -> param COMMA paramlist .

    RPAREN          reduce using rule 8 (paramlist -> param COMMA paramlist .)


state 48

    (14) param -> FLOAT STAR ID .

    COMMA           reduce using rule 14 (param -> FLOAT STAR ID .)
    RPAREN          reduce using rule 14 (param -> FLOAT STAR ID .)


state 49

    (5) func -> FLOAT ID LPAREN paramlist RPAREN LBRACE . stmtlist RBRACE
    (15) stmtlist -> . stmt stmtlist
    (16) stmtlist -> . stmt
    (17) stmt -> . return SEMICOLON
    (18) stmt -> . declarevar SEMICOLON
    (19) stmt -> . assignvar SEMICOLON
    (20) stmt -> . forloop
    (21) stmt -> . incre
    (22) stmt -> . if
    (23) stmt -> . funccall SEMICOLON
    (24) return -> . RETURN
    (25) return -> . RETURN arithexp
    (34) declarevar -> . INT varlist
    (35) declarevar -> . FLOAT varlist
    (36) declarevar -> . INT STAR varlist
    (37) declarevar -> . FLOAT STAR varlist
    (40) assignvar -> . id ASSIGN arithexp
    (26) forloop -> . FOR LPAREN id ASSIGN arithexp SEMICOLON id cmp arithexp SEMICOLON incre RPAREN LBRACE stmtlist RBRACE
    (58) incre -> . INCREMENT id
    (59) incre -> . id INCREMENT
    (27) if -> . IF LPAREN arithexp cmp arithexp RPAREN LBRACE stmtlist RBRACE
    (28) funccall -> . ID LPAREN arglist RPAREN
    (29) funccall -> . ID LPAREN RPAREN
    (62) id -> . ID
    (63) id -> . ID LBRACKET arithexp RBRACKET

    RETURN          shift and go to state 41
    INT             shift and go to state 30
    FLOAT           shift and go to state 42
    FOR             shift and go to state 44
    INCREMENT       shift and go to state 45
    IF              shift and go to state 46
    ID              shift and go to state 31

    stmtlist                       shift and go to state 82
    stmt                           shift and go to state 33
    return                         shift and go to state 34
    declarevar                     shift and go to state 35
    assignvar                      shift and go to state 36
    forloop                        shift and go to state 37
    incre                          shift and go to state 38
    if                             shift and go to state 39
    funccall                       shift and go to state 40
    id                             shift and go to state 43

state 50

    (7) func -> FLOAT ID LPAREN RPAREN LBRACE stmtlist . RBRACE

    RBRACE          shift and go to state 83


state 51

    (4) func -> INT ID LPAREN paramlist RPAREN LBRACE stmtlist . RBRACE

    RBRACE          shift and go to state 84


state 52

    (34) declarevar -> INT varlist .

